fix square styling so circle isn't cut off

--- a/public/css/ball.css
+++ b/public/css/ball.css
@@ -12,7 +12,7 @@
   background-color: #C7F464;
   color:#C7F464;
   width: 43px;
-  height: 43px;
+  height: 45px;
 }
 
 .bar.invisible, .square.invisible {
